Docs unreviewed version

--- a/theme/css/variables.css
+++ b/theme/css/variables.css
@@ -37,7 +37,7 @@
     --quote-bg: hsl(60, 5%, 75%);
     --quote-border: hsl(60, 5%, 70%);
 
-    --table-border-color: #c8c9db;
+    --table-border-color: hsl(60, 9%, 82%);
     --table-header-bg: #272121;
     --table-alternate-bg: #272121;
 
