Quotes are now readable

--- a/theme/css/variables.css
+++ b/theme/css/variables.css
@@ -34,7 +34,7 @@
     --theme-popup-border: #505254;
     --theme-hover: #443737;
 
-    --quote-bg: hsl(60, 5%, 75%);
+    --quote-bg: #272121;
     --quote-border: hsl(60, 5%, 70%);
 
     --table-border-color: hsl(60, 9%, 82%);
